# WindGPT

./: .gitignore  README.md  pyproject.toml
app/: frontend_demo.py  main.py
app/api/: routes.py
app/core/: config.py
app/geo/: analysis.py  parser.py
app/llm/: agent.py
app/rules/: config.yaml  engine.py
data/examples/: in_settlement.geojson  protected_areas.geojson  settlements.geojson  site.geojson  site2.geojson  site3.geojson
scripts/: preprocess_all_data.py
tests/: test_health.py
