[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Joe Hubschneider",email = "joe.hubschneider@stud.hs-hannover.de"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.6.0,<3.0.0)",
    "openai (>=2.9.0,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "streamlit (>=1.52.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
